Java 17, vars, static imports and toList()