@@ -6,8 +6,6 @@ import org.modelmapper.ModelMapper;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.cache.annotation.Caching;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import software.sigma.internship.dto.QuestionDto;
@@ -16,22 +14,22 @@ import software.sigma.internship.entity.Answer;
 import software.sigma.internship.entity.Question;
 import software.sigma.internship.entity.Teacher;
 import software.sigma.internship.entity.Test;
-import software.sigma.internship.enums.Permission;
 import software.sigma.internship.repo.TeacherRepository;
 import software.sigma.internship.repo.TestRepository;
 import software.sigma.internship.service.TestService;
 import software.sigma.internship.validator.exception.TestNotFoundException;
 import software.sigma.internship.validator.exception.UserNotFoundException;
 
-import java.util.Collection;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
+import static org.springframework.security.core.context.SecurityContextHolder.getContext;
+import static software.sigma.internship.enums.Permission.READ_FULL;
 
 @Service
 @Slf4j
 @RequiredArgsConstructor
 public class TestServiceImpl implements TestService {
+
     private final TestRepository testRepository;
     private final TeacherRepository teacherRepository;
     private final ModelMapper allTestsMapper;
@@ -45,7 +43,7 @@ public class TestServiceImpl implements TestService {
         return testRepository.findAll()
             .stream()
             .map(entity -> allTestsMapper.map(entity, TestDto.class))
-            .collect(toList());
+            .toList();
     }
 
     @Override
@@ -58,7 +56,7 @@ public class TestServiceImpl implements TestService {
                     TestDto testDto = allTestsMapper.map(entity, TestDto.class);
                     testDto.setTeacher(null);
                     return testDto;
-                }).collect(toList()))
+                }).toList())
             .orElseThrow(() -> new UserNotFoundException(teacherId));
 
     }
@@ -72,8 +70,7 @@ public class TestServiceImpl implements TestService {
     @Transactional
     public TestDto save(TestDto testDto) {
         Test entity = testForTeacherMapper.map(testDto, Test.class);
-        List<Question> questions = mapQuestions(testDto, entity);
-        entity.setQuestions(questions);
+        entity.setQuestions(mapQuestions(testDto, entity));
         Long teacherId = testDto.getTeacher().getId();
         Teacher teacher = teacherRepository.findById(teacherId).orElseThrow(() -> new UserNotFoundException(teacherId));
         entity.setTeacher(teacher);
@@ -90,11 +87,10 @@ public class TestServiceImpl implements TestService {
     }
 
     private boolean userHasPermissionToSeeAllFields() {
-        Collection<? extends GrantedAuthority> authorities = SecurityContextHolder
-                .getContext()
-                .getAuthentication()
-                .getAuthorities();
-        return authorities.contains(Permission.READ_FULL.getAuthority());
+        return getContext()
+            .getAuthentication()
+            .getAuthorities()
+            .contains(READ_FULL.getAuthority());
     }
 
     @Override
@@ -109,10 +105,9 @@ public class TestServiceImpl implements TestService {
                 .map(question -> {
                     Question entityQuestion = testForTeacherMapper.map(question, Question.class);
                     entityQuestion.setTest(entity);
-                    List<Answer> answers = mapAnswers(question, entityQuestion);
-                    entityQuestion.setAnswers(answers);
+                    entityQuestion.setAnswers(mapAnswers(question, entityQuestion));
                     return entityQuestion;
-                }).collect(toList());
+                }).toList();
     }
 
 
@@ -122,6 +117,6 @@ public class TestServiceImpl implements TestService {
                     Answer entityAnswer = testForTeacherMapper.map(answer, Answer.class);
                     entityAnswer.setQuestion(entityQuestion);
                     return entityAnswer;
-                }).collect(toList());
+                }).toList();
     }
 }
